--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
     <title>CrisYSebasLosMejores</title>
 </head>
 <body>
-<h2 style ="font-family:Monaco;">  <center>Porque Cultivar Mi Propia Papa </center></h2>
+<h2 style ="font-family:Jumble,arial,helvética;"> <center>Porque Cultivar Mi Propia Papa </center> </h2>
 <br> 
+<br>
+<a href="https://es.wikipedia.org/wiki/Solanum_tuberosum" target="_blank" >Ques es la Super Papa</a>
 <hr> 
 <p>La papa esta <strong>muy cara</strong>, es mucho más economico comprar <i>tierra abonada</i> para cultivar nuestra propia papa y <u>economizar recursos</u>, asi tambien <mark>ayudamos al medio ambiente</mark> y prevenimos estar comiendo comida trasgenica, <big>estaremos 100% seguros</big> de la calidad de lo que esta llegando a nuestras mesas, pues somos nosotros quienes cosechamos nuetros productos, en este caso nuestra papa</p>
 <hr>
 <br>
-<h3><center>Tips para cultivar papa "Saitama"</center></h3>
+<a href="https://www.saborusa.com.pa/post/los-10-beneficios-de-la-papa-que-desconocias-" target="_blank" >Beneficios De La Super Papa</a>
+<br>
+<h3 style ="font-family:Jumble,arial,helvética;"> <center>Tips para cultivar papa "Saitama"</center> </h3>
 <br> 
 <hr> 
-<p>Lo primero que debemos hacer es aplicarnos <b>bloqueador solar</b>, para evitar alguna enfermedad en la piel mietras estamos cultivando nuestra papa. <br> Lo segundo a realizar es <em>comprobar el abono</em> de nuestra tierra, nosotros mismos podemos realizar una composta natural para abonarla, esta se hace con las <small>sobras de la cocina</small>, como la piel de las frutas y verduras y las cascaras de los huevos, tambien podemos <mark>añadir lombrices de tierra</mark>, ya que el excremento de estas son abono natural. <br> Lo tercero sera como cultivaremos nuestra papa, esta puede ser con las semillas que vienen de la flor o con la misma papa, partiras una papa a la mitad y separadas las sembraras en la tierra ya abonada. 
+<a href="https://www.freepik.es/vector-premium/feliz-linda-papa-sonriente-icono-ilustracion-personaje-dibujos-animados-plana-aislado-sobre-fondo-blanco-lindo-concepto-personaje-papa_9445489.htm" target="_blank" >Imagen de una papa</a>
+<br>
+<p>Lo primero que debemos hacer es aplicarnos <b>bloqueador solar</b>, para evitar alguna enfermedad en la piel mietras estamos cultivando nuestra papa. <br> Lo segundo a realizar es <em>comprobar el abono</em> de nuestra tierra, nosotros mismos podemos realizar una composta natural para abonarla, esta se hace con las <small>sobras de la cocina</small>, como la piel de las frutas y verduras y las cascaras de los huevos, tambien podemos <mark>añadir lombrices de tierra</mark>, ya que el excremento de estas son abono natural. <br> Lo tercero sera como cultivaremos nuestra papa, esta puede ser con las semillas que vienen de la flor o con la misma papa, partiras una papa a la mitad y separadas las sembraras en la tierra ya abonada.</p>
+<hr>
+<center><img src="https://static.wikia.nocookie.net/doblaje/images/9/9f/Mr-potato-head.jpeg/revision/latest/top-crop/width/360/height/450?cb=20180206223858&path-prefix=es"></center> 
+<hr>
 </p><cite>"Actualmente, la situación de la papa en el país es bastante crítica, no solo por sus altos precios en el mercado, influyendo radicalmente en la cotización de la canasta familiar, sino también por lo que representa para los cultivadores."</cite>
-
-<h1 style = "font-family:Brush Script MT,arial,helvética;">
-</h1>
-<h2 style ="font-family:Brush Script MT,arial,helvética;"> <center>Porque Cultivar Mi Propia Papa </center>
-</h2>
-
+<br>
+<hr>
+<a href="https://www.gob.mx/agricultura/articulos/la-papa-un-alimento-con-historia-y-cultura" target="_blank" >Adora la Super Papa</a>
+<hr>
+<p>¿Te gusto la papa? ¡Visita a su primo!</p>
+<a href="file:///C:/Users/SENA/Documents/GitHub/ejercicioshtml/pagina2.html" target="_blank" > Comé más YUCA</a>
+<hr>
+<br>
+<p>Si tienes dudas, escribe al siguiente correo: </p>
+<a href="https://mail.google.com/mail/u/0/?ogbl#inbox">Correo</a>
 </body>
 </html>
