--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>
 <p>Lo primero que debemos hacer es aplicarnos <b>bloqueador solar</b>, para evitar alguna enfermedad en la piel mietras estamos cultivando nuestra papa. <br> Lo segundo a realizar es <em>comprobar el abono</em> de nuestra tierra, nosotros mismos podemos realizar una composta natural para abonarla, esta se hace con las <small>sobras de la cocina</small>, como la piel de las frutas y verduras y las cascaras de los huevos, tambien podemos <mark>añadir lombrices de tierra</mark>, ya que el excremento de estas son abono natural. <br> Lo tercero sera como cultivaremos nuestra papa, esta puede ser con las semillas que vienen de la flor o con la misma papa, partiras una papa a la mitad y separadas las sembraras en la tierra ya abonada.</p>
 <hr>
-<center><img src="https://static.wikia.nocookie.net/doblaje/images/9/9f/Mr-potato-head.jpeg/revision/latest/top-crop/width/360/height/450?cb=20180206223858&path-prefix=es"></center> 
+<center><img src="imagenes/carapapa.png"></center> 
 <hr>
 </p><cite>"Actualmente, la situación de la papa en el país es bastante crítica, no solo por sus altos precios en el mercado, influyendo radicalmente en la cotización de la canasta familiar, sino también por lo que representa para los cultivadores."</cite>
 <br>
@@ -32,7 +32,7 @@
 <a href="https://www.gob.mx/agricultura/articulos/la-papa-un-alimento-con-historia-y-cultura" target="_blank" >Adora la Super Papa</a>
 <hr>
 <p>¿Te gusto la papa? ¡Visita a su primo!</p>
-<a href="file:///C:/Users/SENA/Documents/GitHub/ejercicioshtml/pagina2.html" target="_blank" > Comé más YUCA</a>
+<a href="pagina2.html" target="_blank" > Comé más YUCA</a>
 <hr>
 <br>
 <p>Si tienes dudas, escribe al siguiente correo: </p>
