--- a/pagina2.html
+++ b/pagina2.html
@@ -23,5 +23,9 @@
 </p><cite>"La yuca (Manihot esculenta), que forma parte del gran género Spurge, es un arbusto perenne y leñoso.
 Aunque las hojas verdes, grandes y arbustivas, pueden añadir cierto interés ornamental a un jardín, estas plantas se cultivan principalmente para cosechar las hojas y los tubérculos. La raíz tuberosa, es una fuente de alimentación de carbohidratos almidonados muy popular en lugares como Sudáfrica y el sudeste asiático. Sólo podrás cultivar la planta de yuca como planta perenne iniciada en primavera si vives en una región cálida, donde es más parecida a climas tropicales y subtropicales en los que se cultiva en sus hábitats nativos. Puede tardar hasta ocho meses en producir una cosecha y es una alternativa interesante a algunas de las hortalizas de raíz más comunes."</cite>
 <hr>
+<p>¿Te gusto la Yuca? ¡Visita a su primo!</p>
+<a href="index.html" target="_blank" > Conoce la papa</a>
+<hr>
+<br>
 </body>
 </html>
