--- a/flixpeliculas.html
+++ b/flixpeliculas.html
@@ -4,9 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FlixPeliculas</title>
 </head>
 <body>
-    
+<h1><center>Flix Peliculas</center></h1>
+<hr>
+<h2><center>Peliculas Infantiles</center></h2>
+<br>
+<table border="1" align="center">
+    <tr>
+        <td>
+        <img src="imagenes/frozeninfantil.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/hoteltransinfantil.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/minioninfantil.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/shaunsheepinfantil.jpg" width="256px" height="256px">
+        </td>
+        
+</table>
+<hr>
+<h2><center>Peliculas De Ciencia Ficcion</center></h2>
+<br>
+<table border="1" align="center">
+    <tr>
+        <td>
+        <img src="imagenes/avatarficcion.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/dunaficcion.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/doctorstrangerficcion.png" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/valerian.jpg" width="256px" height="256px">
+        </td>
+</table>
+<hr>
+<h2><center>Peliculas De Terror</center></h2>
+<br>
+<table border="1" align="center">
+    <tr>
+        <td>
+        <img src="imagenes/lamonjaterror.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/theconjuroterror.jfif" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/miedoterror.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/insidiousterror.png" width="256px" height="256px">
+        </td>
+</table>
+<hr>
+<h2><center>Peliculas De Accion</center></h2>
+<br>
+<table border="1" align="center">
+    <tr>
+        <td>
+        <img src="imagenes/caballeroaccion.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/venonaccion.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/thoraccion.jpg" width="256px" height="256px">
+        </td>
+        <td>
+        <img src="imagenes/elfiloaccion.jpg" width="256px" height="256px">
+        </td>
+    </table>
+<hr>
+<h3>Nombres:</h3>
+<p>Gisset Cristina Calderón Puerta</p>
+<p>Sebastian Camilo Vargas Cortes</p>
 </body>
 </html>
