--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
 <br>
 <p>Si tienes dudas, escribe al siguiente correo: </p>
 <a href="https://mail.google.com/mail/u/0/?ogbl#inbox">Correo</a>
+<hr>
+<p>Mira Peliculas</p>
+<a href="flixpeliculas.html" target="_blank" > Peliculas</a>
 </body>
 </html>
