--- a/pagina2.html
+++ b/pagina2.html
@@ -27,5 +27,7 @@ Aunque las hojas verdes, grandes y arbustivas, pueden añadir cierto interés or
 <a href="index.html" target="_blank" > Conoce la papa</a>
 <hr>
 <br>
+<p>Mira Peliculas</p>
+<a href="flixpeliculas.html" target="_blank" > Peliculas</a>
 </body>
 </html>
